--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,10 +7,15 @@ plugins {
 repositories {
     // Use Maven Central for resolving dependencies.
     mavenCentral()
+    maven {
+        url 'https://dev.saxonica.com/maven/'
+    }
 }
 
 dependencies {
-    implementation 'net.sf.saxon:Saxon-HE:11.4'
+    // https://mvnrepository.com/artifact/com.saxonica/Saxon-PE
+    testImplementation 'com.saxonica:Saxon-PE:12.5'
+
     // https://mvnrepository.com/artifact/org.slf4j/slf4j-api
     implementation 'org.slf4j:slf4j-api:2.0.13'
     // https://mvnrepository.com/artifact/ch.qos.logback/logback-classic
@@ -23,7 +28,7 @@ dependencies {
     testImplementation 'org.assertj:assertj-core:3.26.3'
 
     // This dependency is used by the application.
-    implementation libs.guava
+    //implementation libs.guava
 }
 
 // Apply a specific Java toolchain to ease working on different environments.
